Finished base puzzle

--- a/Puzzles/AOC/aoc.html
+++ b/Puzzles/AOC/aoc.html
@@ -95,10 +95,17 @@
             </table>
 
             <ul>
-                <li>CLUES</li>
-                <li>GO</li>
-                <li>HERE</li>
+                <li style="background-color: black; color: white;">_ _ _ _ _ _ _ _</li>
+                <li style="background-color: black; color: white;">_ _ _ _ _ _ _</li>
+                <li>_ _ _ _ _ _</li>
+                <li>_ _ _ _</li>
+                <li style="background-color: black; color: white;">_ _ _ _ _ _ _ _ _ _</li>
+                <li style="background-color: black; color: white;">_ _ _ _ _ _ _</li>
+                <li>_ _ _ _ _ _ _ _ _</li>
+                <li style="background-color: black; color: white;">_ _ _ _ _</li>
             </ul>
+
+            <p>_ _ _ _ _</p>
         </div>
     </body>
 </html>
