Added Making Moves title

--- a/Puzzles/Making_moves.html
+++ b/Puzzles/Making_moves.html
@@ -2,12 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Alloy of Constructor</title>
+        <title>Alloy of Constructor — Making Moves</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h1>PUZZLE TITLE</h1>
-        <h2>FLAVOUR TEXT</h2>
+        <h1>Making Moves</h1>
         <div id="puzzle">
             <table>
                 <tbody>
