--- a/Puzzles/Making_moves.html
+++ b/Puzzles/Making_moves.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Alloy of Constructor — Making Moves</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="Making moves.css">
     </head>
     <body>
         <h1>Making Moves</h1>
