Added answer checker

--- a/Puzzles/Making_moves.html
+++ b/Puzzles/Making_moves.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Making Moves</h1>
+        <p id="answer-checker"><a href="https://www.callingit.in/1/#58m3UT/SIc8LWT0a-s9VIMZoE0v6BW8IlPHkWsytE9fSqLfnK-TWFraW5nIE1vdmVz">Check Answer</a></p>
         <div id="puzzle">
             <table>
                 <tbody>
@@ -104,7 +105,7 @@
                 <li style="background-color: black; color: white;">_ _ _ _ _</li>
             </ul>
 
-            <p>_ _ _ _ _</p>
+            <p id="length">_ _ _ _ _</p>
         </div>
     </body>
 </html>
