--- a/Puzzles/Making_moves.html
+++ b/Puzzles/Making_moves.html
@@ -95,14 +95,14 @@
             </table>
 
             <ul>
-                <li style="background-color: black; color: white;">_ _ _ _ _ _ _ _</li>
-                <li style="background-color: black; color: white;">_ _ _ _ _ _ _</li>
+                <li>_ _ _ _ _ _ _ _ _ _</li>
+                <li style="border: black solid; border-width: 0 0 2px 0">_ _ _ _ _ _ _</li>
+                <li>_ _ _ _ _ _ _ _</li>
+                <li style="border: black solid; border-width: 0 0 2px 0">_ _ _ _ _ _ _</li>
                 <li>_ _ _ _ _ _</li>
-                <li>_ _ _ _</li>
-                <li style="background-color: black; color: white;">_ _ _ _ _ _ _ _ _ _</li>
-                <li style="background-color: black; color: white;">_ _ _ _ _ _ _</li>
-                <li>_ _ _ _ _ _ _ _ _</li>
-                <li style="background-color: black; color: white;">_ _ _ _ _</li>
+                <li style="border: black solid; border-width: 0 0 2px 0">_ _ _ _</li>
+                <li style="border: black solid; border-width: 0 0 2px 0">_ _ _ _ _ _ _ _ _</li>
+                <li>_ _ _ _ _</li>
             </ul>
 
             <p id="length">_ _ _ _ _</p>
